--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<em>GLA University, Mathura</em> </p>
 							<p>I'm currently working on Ethical hacking and full stack development.</p>
 							<p></p>
-							<a href="/assets/resume.pdf" class="button large scrolly" target="_blank" >Download Resume</a>
+							<a href="/assets/Resume.pdf" class="button large scrolly" target="_blank" >Download Resume</a>
 						</div>
 					</div>
 				</div>
