--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="container">
-					<li><a href="https://www.priyansh.github.io">Priyansh</a></li>
+					<li><a href="https://www.priyanshTri.github.io">Priyansh</a></li>
 					<li><a href="#top">Top</a></li>
 					<li><a href="#work">Routine</a></li>
 					<li><a href="#portfolio">Photos clicked</a></li>
