--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 								<li><a href="https://www.Twitter.com/ManiPriyansh" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/priyansh.tri" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="mailto:priyanshtripathi007@gmail.com" class="icon brands fa-google"><span class="label">Google</span></a></li>
+								<li><a href="https://dev.to/priyanshtri" class="icon brands fa-dev"><span class="label">Dev</span></span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
