--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Name</title>
+    <title>Priyansh Mani Tripathi</title>
 
     <link
       rel="stylesheet"
